--- a/unity-example/index.html
+++ b/unity-example/index.html
@@ -1,5 +1,5 @@
 <head>
-  <script src="/Users/cuonghx/Documents/repositories/n-gen/ton-unity-sdk/dist/tonconnect-ui.min.js"></script>
+  <script src="https://unpkg.com/ton-unity-sdk@latest/dist/ton-unity-sdk.min.js"></script>
 </head>
 <body>
   <script src="./load-sdk.js"></script>
