--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
     <button id="send-tx">send tx</button>
+    <button id="send-tx-with-comment">send tx with comment</button>
+
     <div id="content" style="word-break: break-word; margin-top: 60px; padding: 0 10px;"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
